compiler/tests/should-fail/MalformedProtocolAnnotation5.via
/* MalformedProtocolAnnotationError */

host alice

fun main() {
    val x:int@ZKP(prover = alice, verifiers = {alice}) = 5;
}
